[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Control/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Control/PauseController.gd" type="Script" id=3]
[ext_resource path="res://Scenes/GameObjects/UIScenes/UIContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Control/CutsceneController.gd" type="Script" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
map = 10

[node name="PlayerController" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="PauseController" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="CutsceneController" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="UIContainer" parent="." instance=ExtResource( 4 )]
